# leki_maloczasteczkowe

./: pyproject.toml
1_baza_chembl/: EGFR_combined.csv  chembl.ipynb
2_adme_lead-likeness/: EGFR_lipinski.csv  adme_lead-likeness.ipynb
3_filtrowanie_molekularne/: EGFR_clean.csv  podstruktury_niepozadane.ipynb
4_wirtualne_badania_przesiewowe/: EGFR_lipinski_distances.csv  fingerprinty.ipynb  maccs_fingerprints.csv  morgan_fingerprints.csv
5_klastrowanie/: algorytm_Butina.ipynb
5_klastrowanie/largest_cluster/: CHEMBL2093897.sdf  CHEMBL2114210.sdf  CHEMBL307429.sdf  CHEMBL3814747.sdf  CHEMBL454551.sdf  CHEMBL77918.sdf  CHEMBL80254.sdf  largest_cluster.sdf
6_maksimum_wspolnej_struktury/: fmcs.ipynb
7_wirtualne_badania_przesiewowe/: podobienstwo_ligandow.ipynb
