[project]
name = "leki-maloczasteczkowe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chembl-webresource-client>=0.10.9",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "rdkit>=2024.9.5",
    "seaborn>=0.13.2",
]
